<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    android:background="@color/colorPrimary"
    tools:context=".SplashActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/pata_shule"
            android:textSize="36sp"
            android:textColor="@color/colorNeutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/popote"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/colorNeutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

        <TextView
            android:id="@+id/school"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/searching"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/colorNeutral"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_above="@id/school"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnsignin"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_signin_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp" />
        <Button
            android:id="@+id/btnregister"
            android:text="@string/register"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:textColor="@color/colorNeutral"
            android:background="@drawable/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp" />
    </LinearLayout>


</RelativeLayout>